@@ -5,8 +5,11 @@
 
 <h1>qmail Backend</h1>
 
+<li>The qmail home directory is compiled into the program, and defaults
+to <tt>/var/qmail</tt>, but may be overridden by <tt>$QMAILHOME</tt>.
+
 <li>Messages are delivered through the executable named in
-<tt>$QMAILQUEUE</tt>, or <tt>/var/qmail/bin/qmail-queue</tt> if it is
+<tt>$QMAILQUEUE</tt>, or <tt>$QMAILHOME/bin/qmail-queue</tt> if it is
 not set.
 
 <li>The qmail-queue PID is logged in success messages for correlation
